--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
       <input type="text" id="imgText"><br><br>
       <button type="button" onClick="getInputValue()">Submit</button>
     </form>
-    <script src="renderer.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
