Added RPC stuffffffffff YAYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY

--- a/Src/Public/index.html
+++ b/Src/Public/index.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<h1>BaccRPC Maker</h1>
+		<h2 style="background-color: red;" id="warn-user">The RPC has not been connected, please wait a while till it is loaded...</h2>
 		<form>
 			<label for="state">State:</label>
 			<input type="text" id="state"><br><br>
